# primo-mcp-server

./: .pre-commit-config.yaml  AGENTS.md  pyproject.toml
src/primo_mcp_server/: __init__.py  __main__.py  citations.py  client.py  config.py  exporters.py  formatter.py  models.py  server.py
tests/: conftest.py  test_citations.py  test_exporters.py  test_formatter.py  test_models.py
tests/fixtures/: empty_results.json  search_results.json  suggest_results.json
