[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "primo-mcp-server"
version = "0.1.0"
description = "MCP server for Ex Libris Primo library discovery -- search university catalogue and subscribed databases via the Model Context Protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Gehe Haridas" },
]
dependencies = [
    "mcp>=1.26.0",
    "httpx>=0.28.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
]

[project.scripts]
primo-mcp-server = "primo_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/primo_mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.commitizen]
name = "ksul_cz"
